cmake_minimum_required(VERSION 3.3)
project(VideoAudioDemo)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp yuv.cpp pcm.cpp)
add_executable(VideoAudioDemo ${SOURCE_FILES})

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL REQUIRED sdl)
#PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)

find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)


INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIRS} ${SDLIMAGE_INCLUDE_DIRS} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL_LIBRARIES} ${SDLIMAGE_LIBRARIES}  ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})